k8s/apache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: apache-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: apache
    template:
        metadata:
            labels:
                app: apache
        spec:
            containers:
                -
                    name: apache
                    image: ioni/sc-fleet-manager_apache:latest
                    ports:
                        - { name: http, containerPort: 80 }
