k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mariadb-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mariadb
    template:
        metadata:
            labels:
                app: mariadb
        spec:
            containers:
                -
                    name: mariadb
                    image: mariadb:10.3
                    ports:
                        - { containerPort: 3306 }
                    volumeMounts:
                        -
                            name: mariadb-storage
                            mountPath: /var/lib/mysql
#                            subPath: mariadb
            volumes:
                -
                    name: mariadb-storage
                    persistentVolumeClaim:
                        claimName: mariadb-pvc
