k8s/php-deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: php-deployment-blue
spec:
    replicas: 1
    selector:
        matchLabels:
            app: php
            role: blue
    template:
        metadata:
            labels:
                app: php
                role: blue
        spec:
            containers:
                -
                    name: php
                    image: ioni/sc-fleet-manager_php:0.1
                    ports:
                        - { name: fcgi, containerPort: 9000 }
