k8s/redis-commander-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis-commander-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis-commander
    template:
        metadata:
            labels:
                app: redis-commander
        spec:
            containers:
                -
                    name: redis-commander
                    image: rediscommander/redis-commander:latest
                    ports:
                        - { name: http, containerPort: 8081 }
