k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fm-spa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: 'fm-spa'
      version: 'v1.3.0d'
  template:
    metadata:
      name: fm-spa
      labels:
        app: 'fm-spa'
        version: 'v1.3.0d'
        fm-redis-client: 'true'
    spec:
      serviceAccountName: gcr-fleet-manager
      containers:
        - name: apache
          image: 'eu.gcr.io/sc-fleet-manager/apache:v1.3.0d'
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /robots.txt
              port: http
            initialDelaySeconds: 5
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /robots.txt
              port: http
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 10Mi
        - name: php
          image: 'eu.gcr.io/sc-fleet-manager/php:v1.3.0d'
          imagePullPolicy: Always
          ports:
            - name: fcgi
              containerPort: 9000
          livenessProbe:
            tcpSocket:
              port: fcgi
            initialDelaySeconds: 5
          readinessProbe:
            periodSeconds: 1
            tcpSocket:
              port: fcgi
            initialDelaySeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fm-spa
spec:
  selector:
    app: 'fm-spa'
    version: 'v1.3.0d'
  ports:
    - name: http
      port: 80
      targetPort: 80
