k8s/mariadb-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: mariadb-cluster-ip
spec:
    type: ClusterIP
    selector:
        app: mariadb
    ports:
        - { port: 3306, targetPort: 3306 }
