k8s/php-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: php-cluster-ip
spec:
    type: ClusterIP
    selector:
        app: php
    ports:
        - { port: 9000, targetPort: 9000 } # fcgi
