k8s/redis-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis-cluster-ip
spec:
    type: ClusterIP
    selector:
        app: redis
    ports:
        - { port: 6379, targetPort: 6379 }
