k8s/traefik-redis-commander.yaml
---
kind: Service
apiVersion: v1
metadata:
    name: traefik-redis-commander
spec:
    selector:
        app: redis-commander
    ports:
        -
            name: web
            port: 80
            targetPort: http
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
    name: traefik-redis-commander
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        -
            host: redis-commander.minikube
            http:
                paths:
                    -
                        path: /
                        backend:
                            serviceName: traefik-redis-commander
                            servicePort: web
