k8s/traefik-webui.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: traefik-web-ui
    namespace: kube-system
spec:
    selector:
        k8s-app: traefik-ingress-lb
    ports:
        -
            name: web
            port: 80
            targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: traefik-web-ui
    namespace: kube-system
    annotations:
        kubernetes.io/ingress.class: traefik
spec:
    tls:
        -
            secretName: traefik-ui-tls-cert
    rules:
        -
            host: traefik-ui.minikube
            http:
                paths:
                    -
                        path: /
                        backend:
                            serviceName: traefik-web-ui
                            servicePort: web
